syntax = "proto3";

package order;

import "google/api/annotations.proto";

option go_package = "/protobuff";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
        option (google.api.http) = {
            post: "/api/v1/orders"
            body: "*"
        };
    };
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {
        option (google.api.http) = {
            get: "/api/v1/orders/{id}"
        };
    };
    rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {
        option (google.api.http) = {
            get: "/api/v1/orders"
        };
    };
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {
        option (google.api.http) = {
            put: "/api/v1/orders/{id}"
            body: "*"
        };
    };
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {
        option (google.api.http) = {
            delete: "/api/v1/orders/{id}"
        };
    };
}

message Order {
    string id = 1;
    string product_id = 2;
    int32 quantity = 4;
    float total = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreateOrderRequest {
    string product_id = 1;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string message = 1;
    Order order = 2;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    string message = 1;
    Order order = 2;
}

message ListOrderRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListOrderResponse {
    string message = 1;
    repeated Order orders = 2;
}

message UpdateOrderRequest {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    int32 quantity = 4;
}

message UpdateOrderResponse {
    string message = 1;
    Order order = 2;
}

message DeleteOrderRequest {
    string id = 1;
}

message DeleteOrderResponse {
    string message = 1;
}
